Fix overflow of search results box on 'add topic' on new question

--- a/public/stylesheets/autocomplete.css
+++ b/public/stylesheets/autocomplete.css
@@ -16,7 +16,7 @@ ul.autocomplete-list {
     font-weight: normal;
     background-color: #fff;
     z-index: 2;
-    width: 100%;
+    width: 550px;
     display: none;
 }
 
